# usa-npn-mcp-server

./: .gitignore  .npmignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  index.html  index.js  mkdocs.yml  objects.inv  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: update_database.py  update_readme.py
.github/workflows/: code_checks.yml  docs.yml  docs_build.yml  docs_deploy.yml  integration_tests.yml  publish.yml  release.yml  unit_tests.yml  update_database.yml
api/: index.html
docs/: api.md  index.md  user_guide.md
docs/source/: api.md  conf.py  index.md  news.md  roadmap.md  user_guide.md
docs/source/_ext/: npn_mcp_docs.py
docs/source/reference/api/: usa_npn_mcp_server.api_client.rst  usa_npn_mcp_server.rst  usa_npn_mcp_server.server.rst  usa_npn_mcp_server.utils.endpoints.rst  usa_npn_mcp_server.utils.output_schema.rst  usa_npn_mcp_server.utils.plotting.rst  usa_npn_mcp_server.utils.prompts.rst  usa_npn_mcp_server.utils.rst
scripts/: sync-version.js
search/: search_index.json
src/usa_npn_mcp_server/: __init__.py  __main__.py  api_client.py  endpoint_classes.py  server.py
src/usa_npn_mcp_server/data/: __init__.py  ancillary_data.db  ancillary_dataset_data.csv  ancillary_intensity_data.csv  ancillary_phenophase_data.csv  ancillary_phenophase_definition_data.csv  ancillary_protocol_data.csv  ancillary_species_data.csv  ancillary_species_protocol_data.csv
src/usa_npn_mcp_server/utils/: __init__.py  endpoints.py  output_schema.py  plotting.py  prompts.py  resources.py
tests/: conftest.py
tests/usa_npn_mcp_server/: __init__.py  test_api_client.py  test_cache_manager.py  test_endpoint_classes.py  test_endpoints.py  test_plotting.py  test_server.py
user_guide/: index.html
